# hackerrank-rust

./: Cargo.toml  LICENSE
src/algorithms/dynamic_programming/: candies.rs  fibonacci_modified.rs  stock_maximize.rs  the_coin_change_problem.rs  the_maximum_subarray.rs
src/algorithms/search/: maximise_sum.rs
src/algorithms/warmup/: a_very_big_sum.rs  caesar_cipher.rs  diagonal_difference.rs  extra_long_factorials.rs  library_fine.rs  plus_minus.rs  solve_me_first.rs  solve_me_second.rs  staircase.rs  time_conversion.rs
